# mypy-eppy-builder

./: .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  mkdocs.yml  pyproject.toml  test.py  test_error.py
.github/: copilot-instructions.md
.github/actions/setup-python-env/: action.yml
.github/workflows/: build-and-validate.yml  main.yml  stubs.yml
docs/: index.md  modules.md
samples/: demo.py
src/mypy_eppy_builder/: cli.py  eppy_stubs_generator.py  generate.py  generate_package.py
src/mypy_eppy_builder/templates/: README.md.j2
src/mypy_eppy_builder/templates/common/: class_stub.pyi.jinja2  header.md.jinja2  how_to_install.md.jinja2  idf.pyi.jinja2  usage.md.jinja2
src/mypy_eppy_builder/templates/common/geomeppy/: idf.pyi.jinja2
src/mypy_eppy_builder/templates/common/wrapper/: pyproject.toml.jinja2  setup.py.jinja2
src/mypy_eppy_builder/templates/eppy/: __init__.pyi.j2
src/mypy_eppy_builder/templates/static/: pyproject.toml
src/mypy_eppy_builder/templates/types-archetypal/: README.md.jinja2  setup.py.jinja2
src/mypy_eppy_builder/templates/types-archetypal/src/archetypal-stubs/: __init__.pyi.jinja2
src/mypy_eppy_builder/templates/types-archetypal/src/archetypal-stubs/idfclass/: idf.pyi.jinja2
src/mypy_eppy_builder/templates/types-eppy/: README.md.jinja2
src/mypy_eppy_builder/templates/types-eppy/src/eppy-stubs/eppy/: modeleditor.pyi.jinja2
src/mypy_eppy_builder/templates/types-eppy/src/eppy-stubs/geomeppy/: idf.pyi.jinja2
src/mypy_eppy_builder/templates/types-eppy/src/eppy-stubs/idfclass/: __init__.pyi.jinja2  idf.pyi.jinja2
src/mypy_eppy_builder/templates/version-package/: README.md.jinja2  pyproject.toml.jinja2
src/mypy_eppy_builder/templates/version-package/src/package/: __init__.pyi.jinja2
tests/: test_cli_builder.py  test_foo.py  test_stub_generator.py  test_template_rendering.py  test_templates.py  test_type_check_generated_stubs.py  test_wheel_purity.py
